fixes next config

--- a/src/data/api.mdx
+++ b/src/data/api.mdx
@@ -1,5 +1,7 @@
-**Shinkk API** is a stock market API which not works on real data. Market Up's and Down are Simulated with market logic.
+import {Logo} from "@/components/logo.component";
 
+**Shinkk API** is a stock market API which not works on real data. Market Up's and Down are Simulated with market logic.
+<Logo/>
 ### API Routes
 
 Market [Indexs](/api/index) 
